# glass-box-loan-classifier

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main_ui.py
docs/: model_card.md
src/: config.py  data_ingestion.py  drift.py  eda.py  model_trainer.py  preprocessing.py  reason_codes.py  shap_compat.py  xai_engine.py
tests/: conftest.py  test_drift.py  test_preprocessing.py  test_reason_codes.py  test_shap_compat.py  test_threshold.py
